--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "axios": "0.18.0",
     "lodash": "4.17.11",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vuex": "3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
