--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "0.18.0",
     "lodash": "4.17.11",
     "vue": "^2.5.2",
+    "vue-router": "3.0.1",
     "vuex": "3.0.1"
   },
   "devDependencies": {
